--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
     <button id="rock">ROCK!</button>
     <button id="paper">PAPER!</button>
     <button id="scissor">SCISSOR!</button>
+    <div id="result"></div>
   </body>
 </html>
